--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,9 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
+  firebase_core: ^3.13.0
+  firebase_auth: ^5.5.2
+  cloud_firestore: ^5.6.6
 
 dev_dependencies:
   flutter_flavorizr: ^2.0.0
