--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.2
   cloud_firestore: ^5.6.6
+  pdf: ^3.11.3
+  printing: ^5.14.2
+  provider: ^6.1.4
 
 dev_dependencies:
   flutter_flavorizr: ^2.0.0
