--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   printing: ^5.14.2
   provider: ^6.1.4
   multi_select_flutter: ^4.1.3
+  emailjs: ^4.0.0
 
 dev_dependencies:
   flutter_flavorizr: ^2.0.0
